--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,7 +17,7 @@
             <tr>
                 <td>商品图片</td>
             <tr>
-                <td height="200" align="center"><div id="photo"></div></td>
+               <div  style="width:80px; height:80px; border:none; overflow:hidden;"id="photo"></div>
             </tr>
                 <td><input type="file" name="i_Photos" id="upfilePhotoId" onchange="upfilePhoto()" required="required" ></td>
             </tr>
@@ -138,7 +138,7 @@
                 dataType:'text',
                 success:function (data) {
                     alert(data+"----") //测试接受到什么数据
-                    $("#photo").html("<img  width='300px' height='400px'  src='"+data+"'/>");
+                    $("#photo").html("<img  width='80px' height='80px'  src='"+data+"'/>");
                 }
             })
         }
