--- a/src/main/webapp/items_manage.html
+++ b/src/main/webapp/items_manage.html
@@ -12,6 +12,7 @@
     <meta name="HandheldFriendly" content="true">
     <link rel="stylesheet" href="static/wt/css/master.css">
     <link rel="icon" type="image/x-icon" href="static/wt/images/favicon.ico">
+
     <!--[if lt IE 9 ]>
     <script src="assets/js/separate-js/html5shiv-3.7.2.min.js" type="text/javascript"></script>
     <meta content="no" http-equiv="imagetoolbar">
@@ -219,8 +220,6 @@
             </div>
             <div class="row">
                 <div class="col-md-12">
-
-
                     <div class="woocommerce">
                         <form class="checkout_coupon" method="post" style="display:none">
                             <p class="form-row form-row-first">
@@ -232,36 +231,40 @@
                             </p>
                             <div class="clear"></div>
                         </form>
-                        <form name="checkout" method="post" class="checkout woocommerce-checkout" action="checkout/"
+                        <form name="checkout" method="post" class="checkout woocommerce-checkout" id="formTest"
                               enctype="multipart/form-data" _lpchecked="1">
                             <div class="col2-set" id="customer_details">
                                 <div class="col-1">
                                     <div class="woocommerce-billing-fields">
                                         <!--注册表单/////////////////////////////////////////////////////////////-->
                                         <h3>请输入商品信息</h3>
-                                        <p class="form-row form-row form-row-first ">
+                                        <p class="form-row form-row form-row-wide ">
                                             <label>商品名称(Name)</label>
                                             <!--商品名称，i_name/////////////////////////////////////////////////////////////-->
                                             <input type="text" class="input-text " name="iName">
                                         </p>
-                                        <p class="form-row form-row form-row-last ">
-                                            <!--商品库存,数据库拼写是i_exsit/////////////////////////////////////////////////////////////-->
-                                            <label>商品库存(exist)</label>
-                                            <input type="text" class="input-text " name="iExsit">
-                                        </p>
                                         <div class="clear"></div>
 
-                                        <div class="b-filter__group">
+                                        <div class="b-filter__group" >
                                             <p class="form-row form-row form-row-first">
-                                                <!--商家选择将商品放在那个商店，u_password/////////////////////////////////////////////////////////////-->
-                                                <label>店铺名(Store)</abbr></label>
+                                                <label>商品价格</abbr></label>
+                                            <input type="text" class="input-text " name="iPrice">
                                             </p>
-                                            <select class="selectpicker" data-width="100%" name="storeId">
-                                                <!--动态获取商店名称，storeId/////////////////////////////////////////////////////////////-->
-                                                <option value="大西瓜店">大西瓜店</option>
-                                                <option value="大冬瓜店">大冬瓜店</option>
-                                                <option value="大南瓜店">大南瓜店</option>
-                                            </select>
+                                            <p class="form-row form-row form-row-last ">
+                                                <!--商品库存,数据库拼写是i_exsit/////////////////////////////////////////////////////////////-->
+                                                <label>商品库存(exist)</label>
+                                                <input type="text" class="input-text " name="iExsit">
+                                            </p>
+                                        </div>
+
+                                        <div class="b-filter__group" >
+                                            <p class="form-row form-row form-row-first">
+
+                                                   <label>店铺名(Store)</abbr></label>
+                                               </p>
+                                           <select class="selectpicker"  name="storeId" id="storeId" data-width="100%">
+                                               <option value="-1">请选择店铺名</option>
+                                          </select>
                                         </div>
 
                                         <div class="b-filter__group">
@@ -269,14 +272,15 @@
                                                 <!--商家选择商品分类，categoryFather/////////////////////////////////////////////////////////////-->
                                                 <label>商品类型(Category)</abbr></label>
                                             </p>
-                                            <select class="selectpicker" data-width="100%" name="categoryFather">
+                                            <select class="selectpicker" data-width="100%" id="caFather" name="caFather"
+                                                    onchange="sonSel()">
                                                 <!--动态获取商店名称，storeId/////////////////////////////////////////////////////////////-->
                                                 <option value="-1">请选择商品类型</option>
                                                 <option value="男鞋">男鞋</option>
                                                 <option value="男装">男装</option>
                                                 <option value="女鞋">女鞋</option>
                                                 <option value="女装">女装</option>
-                                                <option value="手机">手机</option>
+                                                <option value="手机数码">手机数码</option>
                                                 <option value="电器">电器</option>
                                             </select>
                                         </div>
@@ -286,15 +290,8 @@
                                                 <!--商家选择商品子类别，categoryName/////////////////////////////////////////////////////////////-->
                                                 <label>商品子类型(Category)</abbr></label>
                                             </p>
-                                            <select class="selectpicker" data-width="100%" name="categoryName">
-                                                <!--动态获取商店名称，storeId/////////////////////////////////////////////////////////////-->
-                                                <option value="-1">请选择商品子类型</option>
-                                                <option value="男鞋">男鞋</option>
-                                                <option value="男装">男装</option>
-                                                <option value="女鞋">女鞋</option>
-                                                <option value="女装">女装</option>
-                                                <option value="手机">手机</option>
-                                                <option value="电器">电器</option>
+                                            <select class="selectpicker" data-width="100%" name="catagoryId"
+                                                    id="second">
                                             </select>
                                         </div>
                                     </div>
@@ -303,18 +300,21 @@
                                     <div class="woocommerce-shipping-fields">
                                         <h3>添加关于产品详情吧</h3>
                                         <p class="form-row form-row">
-                                            <label class="">。。。上传图片模块。。。</label>
-                                            <!--上传头像模块，i_photos/////////////////////////////////////////////////////////////-->
+                                            <label class=""></label>
+                                        <div style="width:200px; height:200px; border:none; overflow:hidden;" id="photo"></div>
+                                        <!--上传头像模块，i_photos/////////////////////////////////////////////////////////////-->
+                                        <input type="file" name="i_Photos" id="upfilePhotoId" onchange="upfilePhoto()"
+                                               required="required">
                                         </p>
                                     </div>
                                     <br>
                                     <br>
                                     <div class="woocommerce-shipping-fields">
-                                            <!--商品介绍，i_introduction/////////////////////////////////////////////////////////////-->
+                                        <!--商品介绍，i_introduction/////////////////////////////////////////////////////////////-->
                                         <h4>添加一段关于商品的介绍吧</h4>
                                         <p class="form-row form-row">
                                             <label for="order_comments" class="">Items Introduction</label>
-                                            <textarea name="iIntroduction" class="input-text " i    d="order_comments"
+                                            <textarea name="iIntroduction" class="input-text " id="order_comments"
                                                       placeholder="写下产品的优点、特色、使用方法等......"></textarea>
                                         </p>
                                     </div>
@@ -330,7 +330,7 @@
 
                                     <div class="form-row place-order">
 
-                                        <input type="submit" class="button alt" id="place_order" value="登记商品 Confirm"
+                                        <input type="button" id="submit" class="button alt" id="place_order" value="登记商品 Confirm"
                                                data-value="Place order"/>
                                     </div>
                                 </div>
@@ -431,6 +431,7 @@
 <!-- ++++++++++++-->
 <!-- MAIN SCRIPTS-->
 <!-- ++++++++++++-->
+
 <script src="static/wt/js/jquery-1.12.4.min.js"></script>
 <script src="static/wt/js/jquery-migrate-1.2.1.js"></script>
 <script src="static/wt/js/modernizr.custom.js"></script>
@@ -458,9 +459,93 @@
 <script src="static/wt/js/imagesloaded.pkgd.min.js"></script>
 <script src="static/wt/js/anime.min.js"></script>
 <script src="static/wt/js/main.js"></script>
-
+<script type="text/javascript" src="static/jq/ajaxfileupload.js"></script>
 </body>
-
 </html>
+<!--插入数据-->
+<script type="text/javascript">
+    $("#submit").click(function () {
+        console.log('submit');
+        var form = new FormData(document.getElementById("formTest"));
+        $.ajax({
+            url:'/insertItems',
+            type:'POST',
+            data:form,
+            processData:false,
+            contentType:false,/*使用formdate一定要加上去*/
+            success:function (result) {
+                if(result.code=="0")
+                    window.location.href='success';
+                else
+                    alert("错误")
+            }
+        });
+    });
+</script>
+<!--查询店铺-->
+<script type="text/javascript">
+   $(function(){
+       var store = $("#storeId");
+       $.ajax({
+           url: '/findStore',
+           type: 'get',
+           success: function (data) {
+               for (var i = 0; i < data.length; i++) {
+                   var str = "<option value='" +  data[i].stId + "'>" + data[i].stName + " </option>";
+                   store.append(str);
+           }
+               store.selectpicker('refresh');
+               store.selectpicker('render');
+           }
+       });
+   })
+</script>
+<!--两级关联查询-->
+<script type="text/javascript">
+    $(function () {
+        $("#second").hide();//初始化第二个下拉框隐藏
+    });
+    var second=$("#second");
+    function sonSel(){//第一个下拉框调用此方法
+        var cafather=$("#caFather").val();//获得第一个下拉框的值
+        /*  alert(cafather);//测试是否获得*/
+        if(cafather!=null&&cafather!=""&&cafather!=-1){
+            //通过ajax将cafather传入后台处理
+            $.post("findCafather",{cafather:cafather},function (data) {
+                var option;
+                for(var i=0;i<data.length;i++){
+                    var catagoryId=data[i].caId;//获取它的id值
+                    /* alert(data.length);//测试*/
+                    option+="<option value='"+catagoryId+"'>" +data[i].caName +" </option>";
+                }
+                second.html(option);
+                second.selectpicker('refresh');
+                second.selectpicker('render');
+
+            })
+        }
+        else
+        {
+            $("#second").hide();
+        }
+    }
+</script>
+<!--添加商品-->
+<script type="text/javascript">
+
+    function  upfilePhoto() {
+        alert("ssss")
+        $.ajaxFileUpload({
+            url:"upFile",
+            secureuri:false,//是否启动安全提交，默认为false
+            fileElementId:"upfilePhotoId",//需要上传的文件ID
+            dataType:'text',
+            success:function (data) {
+                alert(data+"----") //测试接受到什么数据
+                $("#photo").html("<img  width='200px' height='200px'  src='"+data+"'/>");
+            }
+        })
+    }
+</script>
 
 
