'评论、模糊搜索商店dao'

--- a/src/main/webapp/order.html
+++ b/src/main/webapp/order.html
@@ -242,6 +242,7 @@
                                                 <td class="product-name"><h5>下单时间</h5></td>
                                                 <td class="product-price"><h5>总 价 格</h5></td>
                                                 <td class="product-price"><h5>邮寄方式</h5></td>
+                                                <td class="product-price"><h5>收货地址</h5></td>
                                                 <td class="product-price"><h5>订单状态</h5></td>
                                                 <td class="product-price"><h5>我的留言</h5></td>
                                                 <td class="product-remove"><h5>操 作</h5></td>
@@ -274,6 +275,7 @@
                                                 <td class="product-name" ><h5>下单时间</h5></td>
                                                 <td class="product-price" ><h5>总 价 格</h5></td>
                                                 <td class="product-price" ><h5>邮寄方式</h5></td>
+                                                <td class="product-price" ><h5>收货地址</h5></td>
                                                 <td class="product-price" ><h5>订单状态</h5></td>
                                                 <td class="product-price"><h5>我的留言</h5></td>
                                                 <td class="product-remove"><h5>操 作</h5></td>
@@ -302,6 +304,7 @@
                                                 <td class="product-name" ><h5>下单时间</h5></td>
                                                 <td class="product-price" ><h5>总 价 格</h5></td>
                                                 <td class="product-price" ><h5>邮寄方式</h5></td>
+                                                <td class="product-price" ><h5>收货地址</h5></td>
                                                 <td class="product-price" ><h5>订单状态</h5></td>
                                                 <td class="product-price"><h5>我的留言</h5></td>
                                                 <td class="product-remove"><h5>操 作</h5></td>
@@ -333,6 +336,7 @@
                                                 <td class="product-name"><h5>下单时间</h5></td>
                                                 <td class="product-price"><h5>总 价 格</h5></td>
                                                 <td class="product-price"><h5>邮寄方式</h5></td>
+                                                <td class="product-price"><h5>收货地址</h5></td>
                                                 <td class="product-price"><h5>评价状态</h5></td>
                                                 <td class="product-remove"><h5>操 作</h5></td>
                                             </tr>
@@ -431,6 +435,7 @@
                                                 <td class="product-name"><h5>下单时间</h5></td>
                                                 <td class="product-price"><h5>总 价 格</h5></td>
                                                 <td class="product-price"><h5>邮寄方式</h5></td>
+                                                <td class="product-price"><h5>收货地址</h5></td>
                                                 <td class="product-price"><h5>订单状态</h5></td>
                                                 <td class="product-price"><h5>我的留言</h5></td>
                                                 <td class="product-remove"><h5>操 作</h5></td>
