--- a/src/main/webapp/evaluate.html
+++ b/src/main/webapp/evaluate.html
@@ -429,13 +429,40 @@
 <script src="static/wt/js/anime.min.js"></script>
 <script src="static/wt/js/main.js"></script>
 <script type="text/javascript" src="static/jq/ajaxfileupload.js"></script>
-<script type="text/javascript" src="static/jq/evaluate.js"></script>
 </body>
-
 </html>
-
+<script type="text/javascript" src="static/jq/evaluate.js"></script>
 <script type="text/javascript">
-    $(function () {
-        Onload3();
+    $(function (orderId) {
+        orderId = getQueryString('orderId');
+        alert(orderId);
+        $.ajax({
+            contentType: 'application/json;charset=UTF-8',
+            type: 'get',
+            url: '/detail/orderId?orderId=' + orderId,
+            dataType: 'json',
+            data: null,
+            success: function (result) {
+                var s1 = "";
+                var s2 = "<h2 class='typography-title' id='ORDERID'>" + orderId + "号订单 </h2>";
+                var s3 = "<input type='hidden' name='order_id' id='order_id' value='" + orderId + "'/>";
+                $("#orderId").first("h2").append(s2);
+                $("#pa").first("input").append(s3);
+                // alert(s2);
+                $.each(result.data, function (i, v) {
+                    s1 += '<tr><td>' + v.item.iPhotos;
+                    s1 += '</td><td>' + v.item.iName + '</td><td>' + v.item.iPrice + '</td><td>' + v.orDeNumber + '</td>';
+                    s1 += '</tr>';
+                })
+                // alert(s1);
+                $("#orderDetail").first("tr").append(s1);
+            },
+            error: function () {
+                var s = "订单详情加载失败";
+                alert(s);
+
+            }
+        })
+
     })
 </script>
