--- a/src/main/webapp/managerStoreTest.html
+++ b/src/main/webapp/managerStoreTest.html
@@ -8,16 +8,17 @@
 </head>
 <body>
 <form id="sellerSearch" name="sellerSearch">
-    模糊搜索框 <input type="text" id="search" name="search" value="">
+    搜索框 <input type="text" id="search" name="search" value="">
     <input type="button" onclick="searchEvaluation()" value="搜索"><br>
-    日期
-    <input type="date" id="date" name="date" value=""><br>
+    状态
+    <select id="status">
+        <option value="0">正常</option>
+        <option value="1">违规</option>
+    </select>&nbsp;&nbsp;&nbsp;
     <input type="hidden" id="sellerId" name="sellerId" value="2000000"/>
     <select id="condition">
-        <option value="商店">商店</option>
-        <option value="商品">商品</option>
-        <option value="评级">评级</option>
-        <option value="评论">评论</option>
+        <option value="商家">商家</option>
+        <option value="店铺">店铺</option>
     </select>
 </form>
 <br>
@@ -25,15 +26,11 @@
 <table id="show">
     <tbody>
     <tr>
-        <td>商品</td>
-        <td>商店</td>
-        <td>买家</td>
-        <td>评论</td>
-        <td>评级</td>
-        <td>图片</td>
-        <td>时间</td>
-        <td>详情(价格)</td>
-        <td>详情(买家留言)</td>
+        <td>店铺id</td>
+        <td>店铺名</td>
+        <td>卖家</td>
+        <td>状态</td>
+        <td>操作</td>
     </tr>
     </tbody>
 </table>
@@ -42,13 +39,12 @@
 </html>
 <script type="text/javascript">
     function searchEvaluation() {
-        console.log('submit');
-        var id = $("#sellerId").val().parseInt();
+        var id = $("#sellerId").val();
         alert(id);
         var search = $('#search').val();
-        var date = $('#date').val();
+        var status = $('#status').val();
         var condition = $('#condition').val();
-        alert(id+""+search+""+condition+""+date);
+        alert(id+""+search+""+condition+""+status);
         $.ajax({
             contentType: 'application/json;charset=UTF-8',   //定义编码
             url: '/evaluate/searchEvaluation',
