--- a/src/main/webapp/order_detail.html
+++ b/src/main/webapp/order_detail.html
@@ -232,30 +232,7 @@
                                         <td class="product-name"><h5>店 铺</h5></td>
                                     </tr>
                                     </thead>
-                                    <tbody>
-
-                                    <tr class="cart_item">
-
-
-                                        <td class="product-thumbnail"><a href="/"><!--产品详情连接-->
-                                            <!--添加产品图片模块///////////////////////////////////////////////////////////////////////////////////////-->
-                                            <img width="180px" height="180px" src="static/wt/images/1.jpg">
-                                        </a></td>
-
-                                        <!--订单号模块///////////////////////////////////////////////////////////////////////////////////////-->
-                                        <td data-title="Product">678910</td>
-                                        <!--产品名称模块///////////////////////////////////////////////////////////////////////////////////////-->
-                                        <td data-title="Product">男士外套</td>
-                                        <!--产品单价模块///////////////////////////////////////////////////////////////////////////////////////-->
-                                        <td data-title="Product"> 6</td>
-                                        <!--产品数量///////////////////////////////////////////////////////////////////////////////////////-->
-                                        <td data-title="Product">13</td>
-                                        <!--店铺名称模块///////////////////////////////////////////////////////////////////////////////////////-->
-                                        <td data-title="Product">阿玛尼微淘旗舰店</td>
-
-
-                                    </tr>
-
+                                    <tbody id="order_details">
 
                                     </tbody>
                                 </table>
