--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -164,7 +164,7 @@
                     <ul class="nav-language list-inline">
                         <!--登陆后的用户名展示///////////////////////////////////////////////////////////////////////////////////////-->
                         <!--点击，进入个人信息展示display页面/////////////////////////////////////////////////////////////-->
-                        <li><a href="display.html">Id：007</a>
+                        <li><a href="display.html">个人信息</a>
                         </li>
                         <!--退出登陆按钮///////////////////////////////////////////////////////////////////////////////////////-->
                         <li class="active"><a href="login.html">quit</a>
@@ -890,7 +890,7 @@ $(function () {
                             "<a class='b-goods__media js-zoom-images' id='img' href=" + 'static/images/' +
                             items['iPhotos'] +
                             ">" +
-                            "<img class='img-responsive' alt='img'  src=" + 'images/' +
+                            "<img class='img-responsive' alt='img'  src=" + 'static/images/' +
                             items['iPhotos'] +
                             ">" + "</a>" + "<span class='b-goods__main'><span class='b-goods__inner'><span  class='b-goods__categorie'>" +
                             items['iName'] +
@@ -910,15 +910,15 @@ $(function () {
                             ">add to cart</a></span></span></div></div>");
                     }
                     if(index==0){
-                        $("#picture1" ).append("<img class='sp-image' height='500px' width='500px' alt='img' src=" + 'images/' + items['iPhotos'] + ">");
-                        $("#picture2" ).append("<img class='sp-image' height='500px' width='500px' alt='img' src=" + 'images/' + items['iPhotos'] + ">");
-                        $("#picture3" ).append("<img class='sp-image' height='500px' width='500px' alt='img' src=" + 'images/' + items['iPhotos'] + ">");
-                        $("#picture4" ).append("<img class='sp-image' height='500px' width='500px' alt='img' src=" + 'images/' + items['iPhotos'] + ">");
+                        $("#picture1" ).append("<img class='sp-image' height='500px' width='500px' alt='img' src=" + 'static/images/' + items['iPhotos'] + ">");
+                        $("#picture2" ).append("<img class='sp-image' height='500px' width='500px' alt='img' src=" + 'static/images/' + items['iPhotos'] + ">");
+                        $("#picture3" ).append("<img class='sp-image' height='500px' width='500px' alt='img' src=" + 'static/images/' + items['iPhotos'] + ">");
+                        $("#picture4" ).append("<img class='sp-image' height='500px' width='500px' alt='img' src=" + 'static/images/' + items['iPhotos'] + ">");
 
-                        $("#image1" ).append("<img class='sp-image'  height='80px' width='80px' alt='img' src=" + 'images/' + items['iPhotos'] + ">");
-                        $("#image2" ).append("<img class='sp-image'  height='80px' width='80px' alt='img' src=" + 'images/' + items['iPhotos'] + ">");
-                        $("#image3" ).append("<img class='sp-image'  height='80px' width='80px' alt='img' src=" + 'images/' + items['iPhotos'] + ">");
-                        $("#image4" ).append("<img class='sp-image'  height='80px' width='80px' alt='img' src=" + 'images/' + items['iPhotos'] + ">");
+                        $("#image1" ).append("<img class='sp-image'  height='80px' width='80px' alt='img' src=" + 'static/images/' + items['iPhotos'] + ">");
+                        $("#image2" ).append("<img class='sp-image'  height='80px' width='80px' alt='img' src=" + 'static/images/' + items['iPhotos'] + ">");
+                        $("#image3" ).append("<img class='sp-image'  height='80px' width='80px' alt='img' src=" + 'static/images/' + items['iPhotos'] + ">");
+                        $("#image4" ).append("<img class='sp-image'  height='80px' width='80px' alt='img' src=" + 'static/images/' + items['iPhotos'] + ">");
 
                         $("#showPrice").append("<span  class='b-goods__categorie'>" +
                         items['iName'] +
@@ -963,7 +963,7 @@ $(function () {
                             "<a class='b-goods__media js-zoom-images' id='img' href=" + 'static/images/' +
                             items['iPhotos'] +
                             ">" +
-                            "<img class='img-responsive' alt='img'  src=" + 'images/' +
+                            "<img class='img-responsive' alt='img'  src=" + 'static/images/' +
                             items['iPhotos'] +
                             ">" + "</a>" + "<span class='b-goods__main'><span class='b-goods__inner'><span  class='b-goods__categorie'>" +
                             items['iName'] +
@@ -983,15 +983,15 @@ $(function () {
                             ">add to cart</a></span></span></div></div>");
                     }
                     if(index==0){
-                        $("#picture5" ).append("<img class='sp-image' height='500px' width='500px' alt='img' src=" + 'images/' + items['iPhotos'] + ">");
-                        $("#picture6" ).append("<img class='sp-image' height='500px' width='500px' alt='img' src=" + 'images/' + items['iPhotos'] + ">");
-                        $("#picture7" ).append("<img class='sp-image' height='500px' width='500px' alt='img' src=" + 'images/' + items['iPhotos'] + ">");
-                        $("#picture8" ).append("<img class='sp-image' height='500px' width='500px' alt='img' src=" + 'images/' + items['iPhotos'] + ">");
+                        $("#picture5" ).append("<img class='sp-image' height='500px' width='500px' alt='img' src=" + 'static/images/' + items['iPhotos'] + ">");
+                        $("#picture6" ).append("<img class='sp-image' height='500px' width='500px' alt='img' src=" + 'static/images/' + items['iPhotos'] + ">");
+                        $("#picture7" ).append("<img class='sp-image' height='500px' width='500px' alt='img' src=" + 'static/images/' + items['iPhotos'] + ">");
+                        $("#picture8" ).append("<img class='sp-image' height='500px' width='500px' alt='img' src=" + 'static/images/' + items['iPhotos'] + ">");
 
-                        $("#image5" ).append("<img class='sp-image'  height='80px' width='80px' alt='img' src=" + 'images/' + items['iPhotos'] + ">");
-                        $("#image6" ).append("<img class='sp-image'  height='80px' width='80px' alt='img' src=" + 'images/' + items['iPhotos'] + ">");
-                        $("#image7" ).append("<img class='sp-image'  height='80px' width='80px' alt='img' src=" + 'images/' + items['iPhotos'] + ">");
-                        $("#image8" ).append("<img class='sp-image'  height='80px' width='80px' alt='img' src=" + 'images/' + items['iPhotos'] + ">");
+                        $("#image5" ).append("<img class='sp-image'  height='80px' width='80px' alt='img' src=" + 'static/images/' + items['iPhotos'] + ">");
+                        $("#image6" ).append("<img class='sp-image'  height='80px' width='80px' alt='img' src=" + 'static/images/' + items['iPhotos'] + ">");
+                        $("#image7" ).append("<img class='sp-image'  height='80px' width='80px' alt='img' src=" + 'static/images/' + items['iPhotos'] + ">");
+                        $("#image8" ).append("<img class='sp-image'  height='80px' width='80px' alt='img' src=" + 'static/images/' + items['iPhotos'] + ">");
 
                         $("#showPrice1").append("<span  class='b-goods__categorie'>" +
                             items['iName'] +
