--- a/src/main/webapp/personal.html
+++ b/src/main/webapp/personal.html
@@ -9,9 +9,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="telephone=no" name="format-detection">
     <meta name="HandheldFriendly" content="true">
-    <!--路径/////////////////////////////////////////////////////////////////////////-->
     <link rel="stylesheet" href="static/wt/css/master.css">
     <link rel="icon" type="image/x-icon" href="static/wt/images/favicon.ico">
+    <script type="text/javascript" src="static/js/user.js"></script>
     <!--[if lt IE 9 ]>
     <script src="assets/js/separate-js/html5shiv-3.7.2.min.js" type="text/javascript"></script>
     <meta content="no" http-equiv="imagetoolbar">
@@ -26,8 +26,12 @@
 <!-- FULL SCREEN MENU-->
 <!-- ==========================-->
 <div class="wrap-fixed-menu" id="fixedMenu">
+
+
     <button type="button" class="fullmenu-close"><i class="fa fa-times"></i></button>
+
     <nav class="fullscreen-center-menu">
+
         <!--左上角隐藏的导航栏入口/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
         <div id="dl-menu" class="dl-menuwrapper">
             <ul class="dl-menu menu-item list-unstyled">
@@ -43,7 +47,7 @@
 
                     </ul>
                 </li>
-                <li><a href="display.html"><span>about</span></a></li>
+                <li><a href="about.html"><span>about</span></a></li>
                 <li><a href="lookbook.html"><span>lookbook</span></a></li>
 
                 <li>
@@ -52,10 +56,10 @@
                     <ul class="dl-submenu">
 
                         <li><a href="shop-1.html"><span>Catalog Grid 1</span></a></li>
-                        <li><a href="shop.html"><span>Catalog Grid 2</span></a></li>
+                        <li><a href="shop-2.html"><span>Catalog Grid 2</span></a></li>
                         <li><a href="shop-2-list.html"><span>Catalog List</span></a></li>
                         <li><a href="shop-single-1.html"><span>Product page 1</span></a></li>
-                        <li><a href="shop_single.html"><span>Product page 2</span></a></li>
+                        <li><a href="shop-single-2.html"><span>Product page 2</span></a></li>
                         <li><a href="shop-single-3.html"><span>Product page 3</span></a></li>
                         <li><a href="cart.html"><span>Cart page</span></a></li>
                         <li><a href="checkout.html"><span>Checkout page </span></a></li>
@@ -166,7 +170,7 @@
                             <li><a class="btn_header_search" href="#"><i class="icon fa fa-search"></i></a>
                             </li>
                             <!--个人资料/////////////////////////////////////////////////////////////////////////////////////////-->
-                            <li><a href="#"><h5>个人信息</h5></a>
+                            <li><a href="#">个人信息</a>
                             </li>
                             <li><span class="header-cart"><a href="#"><i class="icon fa fa-shopping-cart"
                                                                          aria-hidden="true"></i></a><span
@@ -183,8 +187,8 @@
                         <!--点击主logo回到home.html主页/////////////////////////////////////////////////////////////////////-->
                         <a class="navbar-brand scroll" href="home.html">
                             <!--导航栏最中间的logo/////////////////////////////////////////////////////////////////////////////////-->
-                            <img class="normal-logo" src="static/wt/images/logo.png" alt="logo">
-                            <img class="scroll-logo hidden-xs" src="static/wt/images/logo.png" alt="logo">
+                            <img class="normal-logo" src="images/logo.png" alt="logo">
+                            <img class="scroll-logo hidden-xs" src="images/logo.png" alt="logo">
                         </a>
                     </div>
                 </div>
@@ -215,7 +219,7 @@
 
 
                     <div class="woocommerce">
-                        <form class="checkout_coupon" method="post" style="display:none">
+                        <form id="checkout" class="checkout_coupon" method="post" style="display:none">
                             <p class="form-row form-row-first">
                                 <input type="text" name="coupon_code" class="input-text" placeholder="Coupon code"
                                        id="coupon_code" value="">
@@ -229,6 +233,16 @@
                               enctype="multipart/form-data" _lpchecked="1">
                             <div class="col2-set" id="customer_details">
                                 <div class="col-1">
+                                    <h3>我的头像</h3>
+                                    <div class="img-group">
+                                        <div class="row">
+                                            <div class="col-md-4">
+                                                <div class="img-group__item tilter tilter--1" id="img">
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <br/>
                                     <div class="woocommerce-billing-fields">
                                         <!--修改个人信息表单/////////////////////////////////////////////////////////////-->
                                         <!--可以的话，尽量做到个人信息回显/////////////////////////////////////////////////////////////-->
@@ -236,28 +250,28 @@
                                         <p class="form-row form-row form-row-first ">
                                             <label>姓 名(Name)</label>
                                             <!--用户姓名，u_user_name/////////////////////////////////////////////////////////////-->
-                                            <input type="text" class="input-text " name="uUsername">
+                                            <input type="text" class="input-text " id="uUserName" name="uUsername">
                                         </p>
                                         <p class="form-row form-row form-row-last ">
                                             <!--用户电话号码，u_tel/////////////////////////////////////////////////////////////-->
                                             <label>联系电话(Tel)</label>
-                                            <input type="text" class="input-text " name="uTel">
+                                            <input type="text" class="input-text " id="uTel" name="uTel">
                                         </p>
                                         <div class="clear"></div>
                                         <p class="form-row form-row form-row-wide">
                                             <!--用户默认地址，地址一，u_address1/////////////////////////////////////////////////////////////-->
                                             <label>默认地址(必填，Address)</label>
-                                            <input type="text" class="input-text " name="uAddress1">
+                                            <input type="text" class="input-text " id="uAddress1" name="uAddress1">
                                         </p>
                                         <p class="form-row form-row form-row-wide">
                                             <!--用户地址，地址二，u_address2/////////////////////////////////////////////////////////////-->
                                             <label>地址二(Address)</label>
-                                            <input type="text" class="input-text " name="uAddress2">
+                                            <input type="text" class="input-text " id="uAddress2" name="uAddress2">
                                         </p>
                                         <p class="form-row form-row form-row-wide">
                                             <!--用户地址，地址三，u_address1/////////////////////////////////////////////////////////////-->
                                             <label>地址三(Address)</label>
-                                            <input type="text" class="input-text " name="uAddress3">
+                                            <input type="text" class="input-text " id="uAddress3"name="uAddress3">
                                         </p>
 
                                         <div class="b-filter__group">
@@ -265,7 +279,7 @@
                                                 <!--用户性别，u_password/////////////////////////////////////////////////////////////-->
                                                 <label>性 别(Gender)</abbr></label>
                                             </p>
-                                            <select class="selectpicker" data-width="100%" name="uSex">
+                                            <select class="selectpicker" data-width="100%" id="uSex" name="uSex">
                                                 <option value="男">男</option>
                                                 <option value="女">女</option>
                                                 <option value="其他">其他</option>
@@ -275,6 +289,7 @@
 
                                     </div>
                                 </div>
+
                                 <div class="col-2">
                                     <div class="woocommerce-shipping-fields">
                                         <h3>更改个人头像</h3>
@@ -292,7 +307,7 @@
 
                                     <div class="form-row place-order">
 
-                                        <input type="submit" class="button alt" id="place_order" value="确 认 修 改 confirm"
+                                        <input type="button" class="button alt" id="place_order" value="确 认 修 改 confirm" onclick="personal_update()"
                                                data-value="Place order"/>
                                     </div>
                                 </div>
@@ -342,6 +357,12 @@
                                         <li class="footer-list__item"><a class="footer-list__link"
                                                                          href="">International</a>
                                         </li>
+                                        <!--<li class="footer-list__item"><a class="footer-list__link"-->
+                                        <!--href="privacy-policy.html">Privacy</a>-->
+                                        <!--</li>-->
+                                        <!--<li class="footer-list__item"><a class="footer-list__link"-->
+                                        <!--href="terms-of-use.html">Terms</a>-->
+                                        <!--</li>-->
                                     </ul>
                                 </div>
                                 <div class="col-md-6">
@@ -353,7 +374,7 @@
                                         <li class="footer-list__item"><a class="footer-list__link" href="">Warranty</a>
                                         </li>
                                         <!--帮助入口//////////////////////////////////////////////////////////////////////////////-->
-                                        <li class="footer-list__item"><a class="footer-list__link" href="display.html">Help</a>
+                                        <li class="footer-list__item"><a class="footer-list__link" href="about.html">Help</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -387,7 +408,6 @@
 <!-- end layout-theme-->
 
 
-<!-- end layout-theme-->
 <!-- ++++++++++++-->
 <!-- MAIN SCRIPTS-->
 <!-- ++++++++++++-->
@@ -418,6 +438,12 @@
 <script src="static/wt/js/imagesloaded.pkgd.min.js"></script>
 <script src="static/wt/js/anime.min.js"></script>
 <script src="static/wt/js/main.js"></script>
+<script src="static/js/user.js"></script>
+<script type="text/javascript">
+    $(function () {
+        personal();
+    })
+</script>
 </body>
 </html>
 
