--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -10,20 +9,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="telephone=no" name="format-detection">
     <meta name="HandheldFriendly" content="true">
-    <script type="text/javascript">
-        function register() {
-            $.ajax({
-                type: "post",
-                url: "/weitao/user",
-                dataType: "json",
-                data: $('#checkout').serialize(),
-                success: function (result) {
-                    console.log(result);
-                }
-            });
-        }
-
-    </script>
     <link rel="stylesheet" href="static/wt/css/master.css">
     <link rel="icon" type="image/x-icon" href="static/wt/images/favicon.ico">
     <!--[if lt IE 9 ]>
@@ -31,7 +16,6 @@
     <meta content="no" http-equiv="imagetoolbar">
     <![endif]-->
 </head>
-
 <body>
 <!-- Loader-->
 <div id="page-preloader"><span class="spinner border-t_second_b border-t_prim_a"></span>
@@ -93,8 +77,7 @@
                 <div class="col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
                     <div class="navbar-search">
                         <form class="search-global">
-                            <input class="search-global__input" type="text" placeholder="Type to search"
-                                   autocomplete="off" name="s" value="">
+                            <input class="search-global__input" type="text" placeholder="Type to search" autocomplete="off" name="s" value="">
                             <button class="search-global__btn"><i class="icon stroke icon-Search"></i>
                             </button>
                             <div class="search-global__note">Begin typing your search above and press return to
@@ -287,8 +270,7 @@
                             <div id="order_review" class="woocommerce-checkout-review-order">
                                 <div id="payment" class="woocommerce-checkout-payment">
                                     <div class="form-row place-order">
-                                        <input type="button" class="button alt" id="place_order" value="注  册 register" onclick="register()"
-                                               data-value="Place order"/>
+                                        <input type="button" class="button alt" id="place_order" value="注  册 register" data-value="Place order" onclick="register()"/>
                                     </div>
                                 </div>
                             </div>
@@ -412,6 +394,7 @@
 <script src="static/wt/js/imagesloaded.pkgd.min.js"></script>
 <script src="static/wt/js/anime.min.js"></script>
 <script src="static/wt/js/main.js"></script>
+<script src="static/js/user.js"></script>
 </body>
 </html>
 
